syntax = "proto3";

package pb;

option go_package = "pkg/p2p/pb";

message Transaction {
  string sender = 1;
  string receiver = 2;
  double amount = 3;
  int64 timestamp = 4;
  bytes signature = 5;
}

message TxResponse {
  string status = 1;
  string message = 2;
}

message Empty {}

message Block {
  repeated Transaction transactions = 1;
  string merkleRoot = 2;
  string prevBlockHash = 3;
  string currentBlockHash = 4;
}

message VoteRequest {
  Block block = 1;
}

message VoteResponse {
  string nodeId = 1;
  bool approved = 2;
}

service NodeService {
  rpc SendTransaction(Transaction) returns (TxResponse);
  rpc Ping(Empty) returns (TxResponse);
  rpc ProposeBlock(VoteRequest) returns (VoteResponse);
  rpc CommitBlock(Block) returns (TxResponse);
}
